# fractol

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.c
includes/: colors.h  fractol.h  graphics_base.h  keyboard.h  vector.h
libft/: CMakeLists.txt  Makefile  ft_abs.c  ft_fabs.c  ft_max.c  ft_min.c  ft_strequ.c  get_next_line.c  libft.h
minilibx/: Makefile  Makefile.gen  Makefile.mk  configure  mlx.h  mlx_int.h
minilibx/test/: Makefile.gen  Makefile.mk  mlx-test
minilibx_mac/: Makefile  mlx.h
minilibx_mac/man/man1/: mlx_new_image.1  mlx_pixel_put.1
minilibx_mac/man/man3/: mlx_loop.1
srcs/: algebraic_init.c  buddah.c  buddah2.c  buddha.c  change_color.c  check.c  cleaner.c  color.c  color_a.c  color_g.c  complex.c  complex_handler.c  complex_init.c  complex_math.c  complex_trig.c  constructor.c  draw_algebraic.c  draw_line.c  errors_usage.c  fractol_init.c  fractols.c  fractols_ac.c  fractols_al.c  fractols_bonus.c  fractols_buddha.c  fractols_gr.c  fractols_koch.c  fractols_main.c  fractols_pifagor.c  fractols_r-t.c  fractols_rt.c  fractols_snow.c  fractols_tree.c  fractols_tw.c  geometric_init.c  help.c  help_a.c  help_g.c  julia.c  keyboard.c  (+14 more)
